# poetjupy

./: .gitignore  README.md  pyproject.toml
poetjupy/: p03_06_Solution.py
poetjupy/.ipynb_checkpoints/: 03_06_Challenge-checkpoint.ipynb
tests/: p03_06_Tests.py
